docs/4.20/edge_computing/ztp-deploying-far-edge-sites.md
You can provision OpenShift Container Platform clusters at scale with Red Hat Advanced Cluster Management (RHACM) using the assisted service and the GitOps plugin policy generator with core-reduction technology enabled. The GitOps Zero Touch Provisioning (ZTP) pipeline performs the cluster installations. GitOps ZTP can be used in a disconnected environment.

> [!IMPORTANT]
> Using `PolicyGenTemplate` CRs to manage and deploy policies to managed clusters will be deprecated in an upcoming OpenShift Container Platform release. Equivalent and improved functionality is available using Red Hat Advanced Cluster Management (RHACM) and `PolicyGenerator` CRs.
>
> For more information about `PolicyGenerator` resources, see the RHACM [Integrating Policy Generator](https://docs.redhat.com/en/documentation/red_hat_advanced_cluster_management_for_kubernetes/2.13/html-single/governance/index#integrate-policy-generator) documentation.

<div>

<div class="title">

Additional resources

</div>

- [Configuring managed cluster policies by using PolicyGenerator resources](../edge_computing/policygenerator_for_ztp/ztp-configuring-managed-clusters-policygenerator.xml#ztp-configuring-managed-clusters-policygenerator)

- [Comparing RHACM PolicyGenerator and PolicyGenTemplate resource patching](../edge_computing/policygenerator_for_ztp/ztp-configuring-managed-clusters-policygenerator.xml#ztp-comparing-pgt-and-rhacm-pg-patching-strategies_ztp-configuring-managed-clusters-policygenerator)

</div>

# GitOps ZTP and Topology Aware Lifecycle Manager

GitOps Zero Touch Provisioning (ZTP) generates installation and configuration CRs from manifests stored in Git. These artifacts are applied to a centralized hub cluster where Red Hat Advanced Cluster Management (RHACM), the assisted service, and the Topology Aware Lifecycle Manager (TALM) use the CRs to install and configure the managed cluster. The configuration phase of the GitOps ZTP pipeline uses the TALM to orchestrate the application of the configuration CRs to the cluster. There are several key integration points between GitOps ZTP and the TALM.

Inform policies
By default, GitOps ZTP creates all policies with a remediation action of `inform`. These policies cause RHACM to report on compliance status of clusters relevant to the policies but does not apply the desired configuration. During the GitOps ZTP process, after OpenShift installation, the TALM steps through the created `inform` policies and enforces them on the target managed cluster(s). This applies the configuration to the managed cluster. Outside of the GitOps ZTP phase of the cluster lifecycle, this allows you to change policies without the risk of immediately rolling those changes out to affected managed clusters. You can control the timing and the set of remediated clusters by using TALM.

Automatic creation of ClusterGroupUpgrade CRs
To automate the initial configuration of newly deployed clusters, TALM monitors the state of all `ManagedCluster` CRs on the hub cluster. Any `ManagedCluster` CR that does not have a `ztp-done` label applied, including newly created `ManagedCluster` CRs, causes the TALM to automatically create a `ClusterGroupUpgrade` CR with the following characteristics:

- The `ClusterGroupUpgrade` CR is created and enabled in the `ztp-install` namespace.

- `ClusterGroupUpgrade` CR has the same name as the `ManagedCluster` CR.

- The cluster selector includes only the cluster associated with that `ManagedCluster` CR.

- The set of managed policies includes all policies that RHACM has bound to the cluster at the time the `ClusterGroupUpgrade` is created.

- Pre-caching is disabled.

- Timeout set to 4 hours (240 minutes).

The automatic creation of an enabled `ClusterGroupUpgrade` ensures that initial zero-touch deployment of clusters proceeds without the need for user intervention. Additionally, the automatic creation of a `ClusterGroupUpgrade` CR for any `ManagedCluster` without the `ztp-done` label allows a failed GitOps ZTP installation to be restarted by simply deleting the `ClusterGroupUpgrade` CR for the cluster.

Waves
Each policy generated from a `PolicyGenerator` or `PolicyGentemplate` CR includes a `ztp-deploy-wave` annotation. This annotation is based on the same annotation from each CR which is included in that policy. The wave annotation is used to order the policies in the auto-generated `ClusterGroupUpgrade` CR. The wave annotation is not used other than for the auto-generated `ClusterGroupUpgrade` CR.

> [!NOTE]
> All CRs in the same policy must have the same setting for the `ztp-deploy-wave` annotation. The default value of this annotation for each CR can be overridden in the `PolicyGenerator` or `PolicyGentemplate`. The wave annotation in the source CR is used for determining and setting the policy wave annotation. This annotation is removed from each built CR which is included in the generated policy at runtime.

The TALM applies the configuration policies in the order specified by the wave annotations. The TALM waits for each policy to be compliant before moving to the next policy. It is important to ensure that the wave annotation for each CR takes into account any prerequisites for those CRs to be applied to the cluster. For example, an Operator must be installed before or concurrently with the configuration for the Operator. Similarly, the `CatalogSource` for an Operator must be installed in a wave before or concurrently with the Operator Subscription. The default wave value for each CR takes these prerequisites into account.

> [!NOTE]
> Multiple CRs and policies can share the same wave number. Having fewer policies can result in faster deployments and lower CPU usage. It is a best practice to group many CRs into relatively few waves.

To check the default wave value in each source CR, run the following command against the `out/source-crs` directory that is extracted from the `ztp-site-generate` container image:

``` terminal
$ grep -r "ztp-deploy-wave" out/source-crs
```

Phase labels
The `ClusterGroupUpgrade` CR is automatically created and includes directives to annotate the `ManagedCluster` CR with labels at the start and end of the GitOps ZTP process.

When GitOps ZTP configuration postinstallation commences, the `ManagedCluster` has the `ztp-running` label applied. When all policies are remediated to the cluster and are fully compliant, these directives cause the TALM to remove the `ztp-running` label and apply the `ztp-done` label.

For deployments that make use of the `informDuValidator` policy, the `ztp-done` label is applied when the cluster is fully ready for deployment of applications. This includes all reconciliation and resulting effects of the GitOps ZTP applied configuration CRs. The `ztp-done` label affects automatic `ClusterGroupUpgrade` CR creation by TALM. Do not manipulate this label after the initial GitOps ZTP installation of the cluster.

Linked CRs
The automatically created `ClusterGroupUpgrade` CR has the owner reference set as the `ManagedCluster` from which it was derived. This reference ensures that deleting the `ManagedCluster` CR causes the instance of the `ClusterGroupUpgrade` to be deleted along with any supporting resources.

# Overview of deploying managed clusters with GitOps ZTP

Red Hat Advanced Cluster Management (RHACM) uses GitOps Zero Touch Provisioning (ZTP) to deploy single-node OpenShift Container Platform clusters, three-node clusters, and standard clusters. You manage site configuration data as OpenShift Container Platform custom resources (CRs) in a Git repository. GitOps ZTP uses a declarative GitOps approach for a develop once, deploy anywhere model to deploy the managed clusters.

The deployment of the clusters includes:

- Installing the host operating system (RHCOS) on a blank server

- Deploying OpenShift Container Platform

- Creating cluster policies and site subscriptions

- Making the necessary network configurations to the server operating system

- Deploying profile Operators and performing any needed software-related configuration, such as performance profile, PTP, and SR-IOV

## Overview of the managed site installation process

After you apply the managed site custom resources (CRs) on the hub cluster, the following actions happen automatically:

1.  A Discovery image ISO file is generated and booted on the target host.

2.  When the ISO file successfully boots on the target host it reports the host hardware information to RHACM.

3.  After all hosts are discovered, OpenShift Container Platform is installed.

4.  When OpenShift Container Platform finishes installing, the hub installs the `klusterlet` service on the target cluster.

5.  The requested add-on services are installed on the target cluster.

The Discovery image ISO process is complete when the `Agent` CR for the managed cluster is created on the hub cluster.

> [!IMPORTANT]
> The target bare-metal host must meet the networking, firmware, and hardware requirements listed in [Recommended single-node OpenShift cluster configuration for vDU application workloads](../edge_computing/ztp-reference-cluster-configuration-for-vdu.xml#sno-configure-for-vdu).

# Creating the managed bare-metal host secrets

Add the required `Secret` custom resources (CRs) for the managed bare-metal host to the hub cluster. You need a secret for the GitOps Zero Touch Provisioning (ZTP) pipeline to access the Baseboard Management Controller (BMC) and a secret for the assisted installer service to pull cluster installation images from the registry.

> [!NOTE]
> The secrets are referenced from the `SiteConfig` CR by name. The namespace must match the `SiteConfig` namespace.

<div>

<div class="title">

Procedure

</div>

1.  Create a YAML secret file containing credentials for the host Baseboard Management Controller (BMC) and a pull secret required for installing OpenShift and all add-on cluster Operators:

    1.  Save the following YAML as the file `example-sno-secret.yaml`:

        ``` yaml
        apiVersion: v1
        kind: Secret
        metadata:
          name: example-sno-bmc-secret
          namespace: example-sno
        data:
          password: <base64_password>
          username: <base64_username>
        type: Opaque
        ---
        apiVersion: v1
        kind: Secret
        metadata:
          name: pull-secret
          namespace: example-sno
        data:
          .dockerconfigjson: <pull_secret>
        type: kubernetes.io/dockerconfigjson
        ```

        - Must match the namespace configured in the related `SiteConfig` CR

        - Base64-encoded values for `password` and `username`

        - Must match the namespace configured in the related `SiteConfig` CR

        - Base64-encoded pull secret

2.  Add the relative path to `example-sno-secret.yaml` to the `kustomization.yaml` file that you use to install the cluster.

</div>

# Configuring Discovery ISO kernel arguments for installations using GitOps ZTP

The GitOps Zero Touch Provisioning (ZTP) workflow uses the Discovery ISO as part of the OpenShift Container Platform installation process on managed bare-metal hosts. You can edit the `InfraEnv` resource to specify kernel arguments for the Discovery ISO. This is useful for cluster installations with specific environmental requirements. For example, configure the `rd.net.timeout.carrier` kernel argument for the Discovery ISO to facilitate static networking for the cluster or to receive a DHCP address before downloading the root file system during installation.

> [!NOTE]
> In OpenShift Container Platform 4.17, you can only add kernel arguments. You can not replace or delete kernel arguments.

<div>

<div class="title">

Prerequisites

</div>

- You have installed the OpenShift CLI (oc).

- You have logged in to the hub cluster as a user with cluster-admin privileges.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Create the `InfraEnv` CR and edit the `spec.kernelArguments` specification to configure kernel arguments.

    1.  Save the following YAML in an `InfraEnv-example.yaml` file:

        > [!NOTE]
        > The `InfraEnv` CR in this example uses template syntax such as `{{ .Cluster.ClusterName }}` that is populated based on values in the `SiteConfig` CR. The `SiteConfig` CR automatically populates values for these templates during deployment. Do not edit the templates manually.

        ``` yaml
        apiVersion: agent-install.openshift.io/v1beta1
        kind: InfraEnv
        metadata:
          annotations:
            argocd.argoproj.io/sync-wave: "1"
          name: "{{ .Cluster.ClusterName }}"
          namespace: "{{ .Cluster.ClusterName }}"
        spec:
          clusterRef:
            name: "{{ .Cluster.ClusterName }}"
            namespace: "{{ .Cluster.ClusterName }}"
          kernelArguments:
            - operation: append
              value: audit=0
            - operation: append
              value: trace=1
          sshAuthorizedKey: "{{ .Site.SshPublicKey }}"
          proxy: "{{ .Cluster.ProxySettings }}"
          pullSecretRef:
            name: "{{ .Site.PullSecretRef.Name }}"
          ignitionConfigOverride: "{{ .Cluster.IgnitionConfigOverride }}"
          nmStateConfigLabelSelector:
            matchLabels:
              nmstate-label: "{{ .Cluster.ClusterName }}"
          additionalNTPSources: "{{ .Cluster.AdditionalNTPSources }}"
        ```

        - Specify the append operation to add a kernel argument.

        - Specify the kernel argument you want to configure. This example configures the audit kernel argument and the trace kernel argument.

2.  Commit the `InfraEnv-example.yaml` CR to the same location in your Git repository that has the `SiteConfig` CR and push your changes. The following example shows a sample Git repository structure:

    ``` text
    ~/example-ztp/install
              └── site-install
                   ├── siteconfig-example.yaml
                   ├── InfraEnv-example.yaml
                   ...
    ```

3.  Edit the `spec.clusters.crTemplates` specification in the `SiteConfig` CR to reference the `InfraEnv-example.yaml` CR in your Git repository:

    ``` yaml
    clusters:
      crTemplates:
        InfraEnv: "InfraEnv-example.yaml"
    ```

    When you are ready to deploy your cluster by committing and pushing the `SiteConfig` CR, the build pipeline uses the custom `InfraEnv-example` CR in your Git repository to configure the infrastructure environment, including the custom kernel arguments.

</div>

<div class="formalpara">

<div class="title">

Verification

</div>

To verify that the kernel arguments are applied, after the Discovery image verifies that OpenShift Container Platform is ready for installation, you can SSH to the target host before the installation process begins. At that point, you can view the kernel arguments for the Discovery ISO in the `/proc/cmdline` file.

</div>

1.  Begin an SSH session with the target host:

    ``` terminal
    $ ssh -i /path/to/privatekey core@<host_name>
    ```

2.  View the system’s kernel arguments by using the following command:

    ``` terminal
    $ cat /proc/cmdline
    ```

# Deploying a managed cluster with SiteConfig and GitOps ZTP

Use the following procedure to create a `SiteConfig` custom resource (CR) and related files and initiate the GitOps Zero Touch Provisioning (ZTP) cluster deployment.

> [!IMPORTANT]
> SiteConfig v1 is deprecated starting with OpenShift Container Platform version 4.18. Equivalent and improved functionality is now available through the SiteConfig Operator using the `ClusterInstance` custom resource. For more information, see [Procedure to transition from SiteConfig CRs to the ClusterInstance API](https://access.redhat.com/articles/7105238).
>
> For more information about the SiteConfig Operator, see [SiteConfig](https://docs.redhat.com/en/documentation/red_hat_advanced_cluster_management_for_kubernetes/2.12/html-single/multicluster_engine_operator_with_red_hat_advanced_cluster_management/index#siteconfig-intro).

<div>

<div class="title">

Prerequisites

</div>

- You have installed the OpenShift CLI (`oc`).

- You have logged in to the hub cluster as a user with `cluster-admin` privileges.

- You configured the hub cluster for generating the required installation and policy CRs.

- You created a Git repository where you manage your custom site configuration data. The repository must be accessible from the hub cluster and you must configure it as a source repository for the ArgoCD application. See "Preparing the GitOps ZTP site configuration repository" for more information.

  > [!NOTE]
  > When you create the source repository, ensure that you patch the ArgoCD application with the `argocd/deployment/argocd-openshift-gitops-patch.json` patch-file that you extract from the `ztp-site-generate` container. See "Configuring the hub cluster with ArgoCD".

- To be ready for provisioning managed clusters, you require the following for each bare-metal host:

  Network connectivity
  Your network requires DNS. Managed cluster hosts should be reachable from the hub cluster. Ensure that Layer 3 connectivity exists between the hub cluster and the managed cluster host.

  Baseboard Management Controller (BMC) details
  GitOps ZTP uses BMC username and password details to connect to the BMC during cluster installation. The GitOps ZTP plugin manages the `ManagedCluster` CRs on the hub cluster based on the `SiteConfig` CR in your site Git repo. You create individual `BMCSecret` CRs for each host manually.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Create the required managed cluster secrets on the hub cluster. These resources must be in a namespace with a name matching the cluster name. For example, in `out/argocd/example/siteconfig/example-sno.yaml`, the cluster name and namespace is `example-sno`.

    1.  Export the cluster namespace by running the following command:

        ``` terminal
        $ export CLUSTERNS=example-sno
        ```

    2.  Create the namespace:

        ``` terminal
        $ oc create namespace $CLUSTERNS
        ```

2.  Create pull secret and BMC `Secret` CRs for the managed cluster. The pull secret must contain all the credentials necessary for installing OpenShift Container Platform and all required Operators. See "Creating the managed bare-metal host secrets" for more information.

    > [!NOTE]
    > The secrets are referenced from the `SiteConfig` custom resource (CR) by name. The namespace must match the `SiteConfig` namespace.

3.  Create a `SiteConfig` CR for your cluster in your local clone of the Git repository:

    1.  Choose the appropriate example for your CR from the `out/argocd/example/siteconfig/` folder. The folder includes example files for single node, three-node, and standard clusters:

        - `example-sno.yaml`

        - `example-3node.yaml`

        - `example-standard.yaml`

    2.  Change the cluster and host details in the example file to match the type of cluster you want. For example:

        <div class="formalpara">

        <div class="title">

        Example single-node OpenShift SiteConfig CR

        </div>

        ``` yaml
        # example-node1-bmh-secret & assisted-deployment-pull-secret need to be created under same namespace example-sno
        ---
        apiVersion: ran.openshift.io/v1
        kind: SiteConfig
        metadata:
          name: "example-sno"
          namespace: "example-sno"
        spec:
          baseDomain: "example.com"
          pullSecretRef:
            name: "assisted-deployment-pull-secret"
          clusterImageSetNameRef: "openshift-4.18"
          sshPublicKey: "ssh-rsa AAAA..."
          clusters:
            - clusterName: "example-sno"
              networkType: "OVNKubernetes"
              # installConfigOverrides is a generic way of passing install-config
              # parameters through the siteConfig.  The 'capabilities' field configures
              # the composable openshift feature.  In this 'capabilities' setting, we
              # remove all the optional set of components.
              # Notes:
              # - OperatorLifecycleManager is needed for 4.15 and later
              # - NodeTuning is needed for 4.13 and later, not for 4.12 and earlier
              # - Ingress is needed for 4.16 and later
              installConfigOverrides: |
                {
                  "capabilities": {
                    "baselineCapabilitySet": "None",
                    "additionalEnabledCapabilities": [
                      "NodeTuning",
                      "OperatorLifecycleManager",
                      "Ingress"
                    ]
                  }
                }
              # It is strongly recommended to include crun manifests as part of the additional install-time manifests for 4.13+.
              # The crun manifests can be obtained from source-crs/optional-extra-manifest/ and added to the git repo ie.sno-extra-manifest.
              # extraManifestPath: sno-extra-manifest
              clusterLabels:
                # These example cluster labels correspond to the bindingRules in the PolicyGenTemplate examples
                du-profile: "latest"
                # These example cluster labels correspond to the bindingRules in the PolicyGenTemplate examples in ../policygentemplates:
                # ../acmpolicygenerator/common-ranGen.yaml will apply to all clusters with 'common: true'
                common: true
                # ../policygentemplates/group-du-sno-ranGen.yaml will apply to all clusters with 'group-du-sno: ""'
                group-du-sno: ""
                # ../policygentemplates/example-sno-site.yaml will apply to all clusters with 'sites: "example-sno"'
                # Normally this should match or contain the cluster name so it only applies to a single cluster
                sites: "example-sno"
              clusterNetwork:
                - cidr: 1001:1::/48
                  hostPrefix: 64
              machineNetwork:
                - cidr: 1111:2222:3333:4444::/64
              serviceNetwork:
                - 1001:2::/112
              additionalNTPSources:
                - 1111:2222:3333:4444::2
              # Initiates the cluster for workload partitioning. Setting specific reserved/isolated CPUSets is done via PolicyTemplate
              # please see Workload Partitioning Feature for a complete guide.
              cpuPartitioningMode: AllNodes
              # Optionally; This can be used to override the KlusterletAddonConfig that is created for this cluster:
              #crTemplates:
              #  KlusterletAddonConfig: "KlusterletAddonConfigOverride.yaml"
              nodes:
                - hostName: "example-node1.example.com"
                  role: "master"
                  # Optionally; This can be used to configure desired BIOS setting on a host:
                  #biosConfigRef:
                  #  filePath: "example-hw.profile"
                  bmcAddress: "idrac-virtualmedia+https://[1111:2222:3333:4444::bbbb:1]/redfish/v1/Systems/System.Embedded.1"
                  bmcCredentialsName:
                    name: "example-node1-bmh-secret"
                  bootMACAddress: "AA:BB:CC:DD:EE:11"
                  # Use UEFISecureBoot to enable secure boot.
                  bootMode: "UEFISecureBoot"
                  rootDeviceHints:
                    deviceName: "/dev/disk/by-path/pci-0000:01:00.0-scsi-0:2:0:0"
                  #crTemplates:
                  #  BareMetalHost: "bmhOverride.yaml"
                  # disk partition at `/var/lib/containers` with ignitionConfigOverride. Some values must be updated. See DiskPartitionContainer.md for more details
                  ignitionConfigOverride: |
                    {
                      "ignition": {
                        "version": "3.2.0"
                      },
                      "storage": {
                        "disks": [
                          {
                            "device": "/dev/disk/by-id/wwn-0x6b07b250ebb9d0002a33509f24af1f62",
                            "partitions": [
                              {
                                "label": "var-lib-containers",
                                "sizeMiB": 0,
                                "startMiB": 250000
                              }
                            ],
                            "wipeTable": false
                          }
                        ],
                        "filesystems": [
                          {
                            "device": "/dev/disk/by-partlabel/var-lib-containers",
                            "format": "xfs",
                            "mountOptions": [
                              "defaults",
                              "prjquota"
                            ],
                            "path": "/var/lib/containers",
                            "wipeFilesystem": true
                          }
                        ]
                      },
                      "systemd": {
                        "units": [
                          {
                            "contents": "# Generated by Butane\n[Unit]\nRequires=systemd-fsck@dev-disk-by\\x2dpartlabel-var\\x2dlib\\x2dcontainers.service\nAfter=systemd-fsck@dev-disk-by\\x2dpartlabel-var\\x2dlib\\x2dcontainers.service\n\n[Mount]\nWhere=/var/lib/containers\nWhat=/dev/disk/by-partlabel/var-lib-containers\nType=xfs\nOptions=defaults,prjquota\n\n[Install]\nRequiredBy=local-fs.target",
                            "enabled": true,
                            "name": "var-lib-containers.mount"
                          }
                        ]
                      }
                    }
                  nodeNetwork:
                    interfaces:
                      - name: eno1
                        macAddress: "AA:BB:CC:DD:EE:11"
                    config:
                      interfaces:
                        - name: eno1
                          type: ethernet
                          state: up
                          ipv4:
                            enabled: false
                          ipv6:
                            enabled: true
                            address:
                              # For SNO sites with static IP addresses, the node-specific,
                              # API and Ingress IPs should all be the same and configured on
                              # the interface
                              - ip: 1111:2222:3333:4444::aaaa:1
                                prefix-length: 64
                      dns-resolver:
                        config:
                          search:
                            - example.com
                          server:
                            - 1111:2222:3333:4444::2
                      routes:
                        config:
                          - destination: ::/0
                            next-hop-interface: eno1
                            next-hop-address: 1111:2222:3333:4444::1
                            table-id: 254
        ```

        </div>

        > [!NOTE]
        > For more information about BMC addressing, see the "Additional resources" section. The `installConfigOverrides` and `ignitionConfigOverride` fields are expanded in the example for ease of readability.

        > [!NOTE]
        > To override the default `BareMetalHost` CR for a node, you can reference the override CR in the node-level `crTemplates` field in the `SiteConfig` CR. Ensure that you set the `argocd.argoproj.io/sync-wave: "3"` annotation in your override `BareMetalHost` CR.

    3.  You can inspect the default set of extra-manifest `MachineConfig` CRs in `out/argocd/extra-manifest`. It is automatically applied to the cluster when it is installed.

    4.  Optional: To provision additional install-time manifests on the provisioned cluster, create a directory in your Git repository, for example, `sno-extra-manifest/`, and add your custom manifest CRs to this directory. If your `SiteConfig.yaml` refers to this directory in the `extraManifestPath` field, any CRs in this referenced directory are appended to the default set of extra manifests.

        > [!IMPORTANT]
        > For optimal cluster performance, enable crun for master and worker nodes in single-node OpenShift, single-node OpenShift with additional worker nodes, three-node OpenShift, and standard clusters.
        >
        > Enable crun in a `ContainerRuntimeConfig` CR as an additional Day 0 install-time manifest to avoid the cluster having to reboot.
        >
        > The `enable-crun-master.yaml` and `enable-crun-worker.yaml` CR files are in the `out/source-crs/optional-extra-manifest/` folder that you can extract from the `ztp-site-generate` container. For more information, see "Customizing extra installation manifests in the GitOps ZTP pipeline".

4.  Add the `SiteConfig` CR to the `kustomization.yaml` file in the `generators` section, similar to the example shown in `out/argocd/example/siteconfig/kustomization.yaml`.

5.  Commit the `SiteConfig` CR and associated `kustomization.yaml` changes in your Git repository and push the changes.

    The ArgoCD pipeline detects the changes and begins the managed cluster deployment.

</div>

<div>

<div class="title">

Verification

</div>

- Verify that the custom roles and labels are applied after the node is deployed:

  ``` terminal
  $ oc describe node example-node.example.com
  ```

</div>

<div class="formalpara">

<div class="title">

Example output

</div>

``` terminal
Name:   example-node.example.com
Roles:  control-plane,example-label,master,worker
Labels: beta.kubernetes.io/arch=amd64
        beta.kubernetes.io/os=linux
        custom-label/parameter1=true
        kubernetes.io/arch=amd64
        kubernetes.io/hostname=cnfdf03.telco5gran.eng.rdu2.redhat.com
        kubernetes.io/os=linux
        node-role.kubernetes.io/control-plane=
        node-role.kubernetes.io/example-label=
        node-role.kubernetes.io/master=
        node-role.kubernetes.io/worker=
        node.openshift.io/os_id=rhcos
```

</div>

- The custom label is applied to the node.

<div>

<div class="title">

Additional resources

</div>

- [Single-node OpenShift SiteConfig CR installation reference](../edge_computing/ztp-deploying-far-edge-sites.xml#ztp-sno-siteconfig-config-reference_ztp-deploying-far-edge-sites)

</div>

## Accelerated provisioning of GitOps ZTP

> [!IMPORTANT]
> Accelerated provisioning of GitOps ZTP is a Technology Preview feature only. Technology Preview features are not supported with Red Hat production service level agreements (SLAs) and might not be functionally complete. Red Hat does not recommend using them in production. These features provide early access to upcoming product features, enabling customers to test functionality and provide feedback during the development process.
>
> For more information about the support scope of Red Hat Technology Preview features, see [Technology Preview Features Support Scope](https://access.redhat.com/support/offerings/techpreview/).

You can reduce the time taken for cluster installation by using accelerated provisioning of GitOps ZTP for single-node OpenShift. Accelerated ZTP speeds up installation by applying Day 2 manifests derived from policies at an earlier stage.

> [!IMPORTANT]
> Accelerated provisioning of GitOps ZTP is supported only when installing single-node OpenShift with Assisted Installer. Otherwise this installation method will fail.

### Activating accelerated ZTP

You can activate accelerated ZTP using the `spec.clusters.clusterLabels.accelerated-ztp` label, as in the following example:

<div class="formalpara">

<div class="title">

Example Accelerated ZTP `SiteConfig` CR.

</div>

``` yaml
apiVersion: ran.openshift.io/v2
kind: SiteConfig
metadata:
  name: "example-sno"
  namespace: "example-sno"
spec:
  baseDomain: "example.com"
  pullSecretRef:
    name: "assisted-deployment-pull-secret"
  clusterImageSetNameRef: "openshift-4.20"
  sshPublicKey: "ssh-rsa AAAA..."
  clusters:
  # ...
    clusterLabels:
        common: true
        group-du-sno: ""
        sites : "example-sno"
        accelerated-ztp: full
```

</div>

You can use `accelerated-ztp: full` to fully automate the accelerated process. GitOps ZTP updates the `AgentClusterInstall` resource with a reference to the accelerated GitOps ZTP `ConfigMap`, and includes resources extracted from policies by TALM, and accelerated ZTP job manifests.

If you use `accelerated-ztp: partial`, GitOps ZTP does not include the accelerated job manifests, but includes policy-derived objects created during the cluster installation of the following `kind` types:

- `PerformanceProfile.performance.openshift.io`

- `Tuned.tuned.openshift.io`

- `Namespace`

- `CatalogSource.operators.coreos.com`

- `ContainerRuntimeConfig.machineconfiguration.openshift.io`

This partial acceleration can reduce the number of reboots done by the node when applying resources of the kind `Performance Profile`, `Tuned`, and `ContainerRuntimeConfig`. TALM installs the Operator subscriptions derived from policies after RHACM completes the import of the cluster, following the same flow as standard GitOps ZTP.

The benefits of accelerated ZTP increase with the scale of your deployment. Using `accelerated-ztp: full` gives more benefit on a large number of clusters. With a smaller number of clusters, the reduction in installation time is less significant. Full accelerated ZTP leaves behind a namespace and a completed job on the spoke that need to be manually removed.

One benefit of using `accelerated-ztp: partial` is that you can override the functionality of the on-spoke job if something goes wrong with the stock implementation or if you require a custom functionality.

### The accelerated ZTP process

Accelerated ZTP uses an additional `ConfigMap` to create the resources derived from policies on the spoke cluster. The standard `ConfigMap` includes manifests that the GitOps ZTP workflow uses to customize cluster installs.

TALM detects that the `accelerated-ztp` label is set and then creates a second `ConfigMap`. As part of accelerated ZTP, the `SiteConfig` generator adds a reference to that second `ConfigMap` using the naming convention `<spoke-cluster-name>-aztp`.

After TALM creates that second `ConfigMap`, it finds all policies bound to the managed cluster and extracts the GitOps ZTP profile information. TALM adds the GitOps ZTP profile information to the `<spoke-cluster-name>-aztp` `ConfigMap` custom resource (CR) and applies the CR to the hub cluster API.

## Configuring IPsec encryption for single-node OpenShift clusters using GitOps ZTP and SiteConfig resources

You can enable IPsec encryption in managed single-node OpenShift clusters that you install using GitOps ZTP and Red Hat Advanced Cluster Management (RHACM). You can encrypt traffic between the managed cluster and IPsec endpoints external to the managed cluster. All network traffic between nodes on the OVN-Kubernetes cluster network is encrypted with IPsec in Transport mode.

> [!IMPORTANT]
> You can also configure IPsec encryption for single-node OpenShift clusters with an additional worker node by following this procedure. It is recommended to use the `MachineConfig` custom resource (CR) to configure IPsec encryption for single-node OpenShift clusters and single-node OpenShift clusters with an additional worker node because of their low resource availability.

<div>

<div class="title">

Prerequisites

</div>

- You have installed the OpenShift CLI (`oc`).

- You have logged in to the hub cluster as a user with `cluster-admin` privileges.

- You have configured RHACM and the hub cluster for generating the required installation and policy custom resources (CRs) for managed clusters.

- You have created a Git repository where you manage your custom site configuration data. The repository must be accessible from the hub cluster and be defined as a source repository for the Argo CD application.

- You have installed the `butane` utility version 0.20.0 or later.

- You have a PKCS#12 certificate for the IPsec endpoint and a CA cert in PEM format.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Extract the latest version of the `ztp-site-generate` container source and merge it with your repository where you manage your custom site configuration data.

2.  Configure `optional-extra-manifest/ipsec/ipsec-endpoint-config.yaml` with the required values that configure IPsec in the cluster. For example:

    ``` yaml
    interfaces:
    - name: hosta_conn
      type: ipsec
      libreswan:
        left: '%defaultroute'
        leftid: '%fromcert'
        leftmodecfgclient: false
        leftcert: left_server
        leftrsasigkey: '%cert'
        right: <external_host>
        rightid: '%fromcert'
        rightrsasigkey: '%cert'
        rightsubnet: <external_address>
        ikev2: insist
        type: tunnel
    ```

    - The value of this field must match with the name of the certificate used on the remote system.

    - Replace `<external_host>` with the external host IP address or DNS hostname.

    - Replace `<external_address>` with the IP subnet of the external host on the other side of the IPsec tunnel.

    - Use the IKEv2 VPN encryption protocol only. Do not use IKEv1, which is deprecated.

3.  Add the following certificates to the `optional-extra-manifest/ipsec` folder:

    - `left_server.p12`: The certificate bundle for the IPsec endpoints

    - `ca.pem`: The certificate authority that you signed your certificates with

      The certificate files are required for the Network Security Services (NSS) database on each host. These files are imported as part of the Butane configuration in later steps.

4.  Open a shell prompt at the `optional-extra-manifest/ipsec` folder of the Git repository where you maintain your custom site configuration data.

5.  Run the `optional-extra-manifest/ipsec/build.sh` script to generate the required Butane and `MachineConfig` CRs files.

    If the PKCS#12 certificate is protected with a password, set the `-W` argument.

    <div class="formalpara">

    <div class="title">

    Example output

    </div>

    ``` terminal
    out
     └── argocd
          └── example
               └── optional-extra-manifest
                    └── ipsec
                         ├── 99-ipsec-master-endpoint-config.bu
                         ├── 99-ipsec-master-endpoint-config.yaml
                         ├── 99-ipsec-worker-endpoint-config.bu
                         ├── 99-ipsec-worker-endpoint-config.yaml
                         ├── build.sh
                         ├── ca.pem
                         ├── left_server.p12
                         ├── enable-ipsec.yaml
                         ├── ipsec-endpoint-config.yml
                         └── README.md
    ```

    </div>

    - The `ipsec/build.sh` script generates the Butane and endpoint configuration CRs.

    - You provide `ca.pem` and `left_server.p12` certificate files that are relevant to your network.

6.  Create a `custom-manifest/` folder in the repository where you manage your custom site configuration data. Add the `enable-ipsec.yaml` and `99-ipsec-*` YAML files to the directory. For example:

    ``` terminal
    siteconfig
      ├── site1-sno-du.yaml
      ├── extra-manifest/
      └── custom-manifest
            ├── enable-ipsec.yaml
            ├── 99-ipsec-worker-endpoint-config.yaml
            └── 99-ipsec-master-endpoint-config.yaml
    ```

7.  In your `SiteConfig` CR, add the `custom-manifest/` directory to the `extraManifests.searchPaths` field. For example:

    ``` yaml
    clusters:
    - clusterName: "site1-sno-du"
      networkType: "OVNKubernetes"
      extraManifests:
        searchPaths:
          - extra-manifest/
          - custom-manifest/
    ```

8.  Commit the `SiteConfig` CR changes and updated files in your Git repository and push the changes to provision the managed cluster and configure IPsec encryption.

    The Argo CD pipeline detects the changes and begins the managed cluster deployment.

    During cluster provisioning, the GitOps ZTP pipeline appends the CRs in the `custom-manifest/` directory to the default set of extra manifests stored in the `extra-manifest/` directory.

</div>

<div class="formalpara">

<div class="title">

Verification

</div>

For information about verifying the IPsec encryption, see "Verifying the IPsec encryption".

</div>

<div>

<div class="title">

Additional resources

</div>

- [Verifying the IPsec encryption](../edge_computing/ztp-deploying-far-edge-sites.xml#ztp-verifying-ipsec_ztp-deploying-far-edge-sites)

- [Configuring IPsec encryption](../networking/network_security/configuring-ipsec-ovn.xml#configuring-ipsec-ovn)

- [Encryption protocol and IPsec mode](../networking/network_security/configuring-ipsec-ovn.xml#nw-ovn-ipsec-encryption_configuring-ipsec-ovn)

- [Installing managed clusters with RHACM and SiteConfig resources](../edge_computing/ztp-deploying-far-edge-sites.xml#ztp-deploying-far-edge-sites)

</div>

## Configuring IPsec encryption for multi-node clusters using GitOps ZTP and SiteConfig resources

You can enable IPsec encryption in managed multi-node clusters that you install using GitOps ZTP and Red Hat Advanced Cluster Management (RHACM). You can encrypt traffic between the managed cluster and IPsec endpoints external to the managed cluster. All network traffic between nodes on the OVN-Kubernetes cluster network is encrypted with IPsec in Transport mode.

<div>

<div class="title">

Prerequisites

</div>

- You have installed the OpenShift CLI (`oc`).

- You have logged in to the hub cluster as a user with `cluster-admin` privileges.

- You have configured RHACM and the hub cluster for generating the required installation and policy custom resources (CRs) for managed clusters.

- You have created a Git repository where you manage your custom site configuration data. The repository must be accessible from the hub cluster and be defined as a source repository for the Argo CD application.

- You have installed the `butane` utility version 0.20.0 or later.

- You have a PKCS#12 certificate for the IPsec endpoint and a CA cert in PEM format.

- You have installed the NMState Operator.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Extract the latest version of the `ztp-site-generate` container source and merge it with your repository where you manage your custom site configuration data.

2.  Configure the `optional-extra-manifest/ipsec/ipsec-config-policy.yaml` file with the required values that configure IPsec in the cluster.

    <div class="formalpara">

    <div class="title">

    `ConfigurationPolicy` object for creating an IPsec configuration

    </div>

    ``` yaml
    apiVersion: policy.open-cluster-management.io/v1
    kind: ConfigurationPolicy
    metadata:
      name: policy-config
    spec:
      namespaceSelector:
        include: ["default"]
        exclude: []
        matchExpressions: []
        matchLabels: {}
      remediationAction: inform
      severity: low
      evaluationInterval:
        compliant:
        noncompliant:
      object-templates-raw: |
        {{- range (lookup "v1" "Node" "" "").items }}
        - complianceType: musthave
          objectDefinition:
            kind: NodeNetworkConfigurationPolicy
            apiVersion: nmstate.io/v1
            metadata:
              name: {{ .metadata.name }}-ipsec-policy
            spec:
              nodeSelector:
                kubernetes.io/hostname: {{ .metadata.name }}
              desiredState:
                interfaces:
                - name: hosta_conn
                  type: ipsec
                  libreswan:
                    left: '%defaultroute'
                    leftid: '%fromcert'
                    leftmodecfgclient: false
                    leftcert: left_server
                    leftrsasigkey: '%cert'
                    right: <external_host>
                    rightid: '%fromcert'
                    rightrsasigkey: '%cert'
                    rightsubnet: <external_address>
                    ikev2: insist
                    type: tunnel
    ```

    </div>

    - The value of this field must match with the name of the certificate used on the remote system.

    - Replace `<external_host>` with the external host IP address or DNS hostname.

    - Replace `<external_address>` with the IP subnet of the external host on the other side of the IPsec tunnel.

    - Use the IKEv2 VPN encryption protocol only. Do not use IKEv1, which is deprecated.

3.  Add the following certificates to the `optional-extra-manifest/ipsec` folder:

    - `left_server.p12`: The certificate bundle for the IPsec endpoints

    - `ca.pem`: The certificate authority that you signed your certificates with

      The certificate files are required for the Network Security Services (NSS) database on each host. These files are imported as part of the Butane configuration in later steps.

4.  Open a shell prompt at the `optional-extra-manifest/ipsec` folder of the Git repository where you maintain your custom site configuration data.

5.  Run the `optional-extra-manifest/ipsec/import-certs.sh` script to generate the required Butane and `MachineConfig` CRs to import the external certs.

    If the PKCS#12 certificate is protected with a password, set the `-W` argument.

    <div class="formalpara">

    <div class="title">

    Example output

    </div>

    ``` terminal
    out
     └── argocd
          └── example
               └── optional-extra-manifest
                    └── ipsec
                         ├── 99-ipsec-master-import-certs.bu
                         ├── 99-ipsec-master-import-certs.yaml
                         ├── 99-ipsec-worker-import-certs.bu
                         ├── 99-ipsec-worker-import-certs.yaml
                         ├── import-certs.sh
                         ├── ca.pem
                         ├── left_server.p12
                         ├── enable-ipsec.yaml
                         ├── ipsec-config-policy.yaml
                         └── README.md
    ```

    </div>

    - The `ipsec/import-certs.sh` script generates the Butane and endpoint configuration CRs.

    - Add the `ca.pem` and `left_server.p12` certificate files that are relevant to your network.

6.  Create a `custom-manifest/` folder in the repository where you manage your custom site configuration data and add the `enable-ipsec.yaml` and `99-ipsec-*` YAML files to the directory.

    <div class="formalpara">

    <div class="title">

    Example `siteconfig` directory

    </div>

    ``` terminal
    siteconfig
      ├── site1-mno-du.yaml
      ├── extra-manifest/
      └── custom-manifest
            ├── enable-ipsec.yaml
            ├── 99-ipsec-master-import-certs.yaml
            └── 99-ipsec-worker-import-certs.yaml
    ```

    </div>

7.  In your `SiteConfig` CR, add the `custom-manifest/` directory to the `extraManifests.searchPaths` field, as in the following example:

    ``` yaml
    clusters:
    - clusterName: "site1-mno-du"
      networkType: "OVNKubernetes"
      extraManifests:
        searchPaths:
          - extra-manifest/
          - custom-manifest/
    ```

8.  Include the `ipsec-config-policy.yaml` config policy file in the `source-crs` directory in GitOps and reference the file in one of the `PolicyGenerator` CRs.

9.  Commit the `SiteConfig` CR changes and updated files in your Git repository and push the changes to provision the managed cluster and configure IPsec encryption.

    The Argo CD pipeline detects the changes and begins the managed cluster deployment.

    During cluster provisioning, the GitOps ZTP pipeline appends the CRs in the `custom-manifest/` directory to the default set of extra manifests stored in the `extra-manifest/` directory.

</div>

<div class="formalpara">

<div class="title">

Verification

</div>

For information about verifying the IPsec encryption, see "Verifying the IPsec encryption".

</div>

<div>

<div class="title">

Additional resources

</div>

- [Verifying the IPsec encryption](../edge_computing/ztp-deploying-far-edge-sites.xml#ztp-verifying-ipsec_ztp-deploying-far-edge-sites)

- [Configuring IPsec encryption](../networking/network_security/configuring-ipsec-ovn.xml#configuring-ipsec-ovn)

- [Encryption protocol and IPsec mode](../networking/network_security/configuring-ipsec-ovn.xml#nw-ovn-ipsec-encryption_configuring-ipsec-ovn)

- [Installing managed clusters with RHACM and SiteConfig resources](../edge_computing/ztp-deploying-far-edge-sites.xml#ztp-deploying-far-edge-sites)

</div>

## Verifying the IPsec encryption

You can verify that the IPsec encryption is successfully applied in a managed OpenShift Container Platform cluster.

<div>

<div class="title">

Prerequisites

</div>

- You have installed the OpenShift CLI (`oc`).

- You have logged in to the hub cluster as a user with `cluster-admin` privileges.

- You have configured the IPsec encryption.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Start a debug pod for the managed cluster by running the following command:

    ``` terminal
    $ oc debug node/<node_name>
    ```

2.  Check that the IPsec policy is applied in the cluster node by running the following command:

    ``` terminal
    sh-5.1# ip xfrm policy
    ```

    <div class="formalpara">

    <div class="title">

    Example output

    </div>

    ``` terminal
    src 172.16.123.0/24 dst 10.1.232.10/32
      dir out priority 1757377 ptype main
      tmpl src 10.1.28.190 dst 10.1.232.10
        proto esp reqid 16393 mode tunnel
    src 10.1.232.10/32 dst 172.16.123.0/24
      dir fwd priority 1757377 ptype main
      tmpl src 10.1.232.10 dst 10.1.28.190
        proto esp reqid 16393 mode tunnel
    src 10.1.232.10/32 dst 172.16.123.0/24
      dir in priority 1757377 ptype main
      tmpl src 10.1.232.10 dst 10.1.28.190
        proto esp reqid 16393 mode tunnel
    ```

    </div>

3.  Check that the IPsec tunnel is up and connected by running the following command:

    ``` terminal
    sh-5.1# ip xfrm state
    ```

    <div class="formalpara">

    <div class="title">

    Example output

    </div>

    ``` terminal
    src 10.1.232.10 dst 10.1.28.190
      proto esp spi 0xa62a05aa reqid 16393 mode tunnel
      replay-window 0 flag af-unspec esn
      auth-trunc hmac(sha1) 0x8c59f680c8ea1e667b665d8424e2ab749cec12dc 96
      enc cbc(aes) 0x2818a489fe84929c8ab72907e9ce2f0eac6f16f2258bd22240f4087e0326badb
      anti-replay esn context:
       seq-hi 0x0, seq 0x0, oseq-hi 0x0, oseq 0x0
       replay_window 128, bitmap-length 4
       00000000 00000000 00000000 00000000
    src 10.1.28.190 dst 10.1.232.10
      proto esp spi 0x8e96e9f9 reqid 16393 mode tunnel
      replay-window 0 flag af-unspec esn
      auth-trunc hmac(sha1) 0xd960ddc0a6baaccb343396a51295e08cfd8aaddd 96
      enc cbc(aes) 0x0273c02e05b4216d5e652de3fc9b3528fea94648bc2b88fa01139fdf0beb27ab
      anti-replay esn context:
       seq-hi 0x0, seq 0x0, oseq-hi 0x0, oseq 0x0
       replay_window 128, bitmap-length 4
       00000000 00000000 00000000 00000000
    ```

    </div>

4.  Ping a known IP in the external host subnet by running the following command: For example, ping an IP address in the `rightsubnet` range that you set in the `ipsec/ipsec-endpoint-config.yaml` file:

    ``` terminal
    sh-5.1# ping 172.16.110.8
    ```

    <div class="formalpara">

    <div class="title">

    Example output

    </div>

    ``` terminal
    PING 172.16.110.8 (172.16.110.8) 56(84) bytes of data.
    64 bytes from 172.16.110.8: icmp_seq=1 ttl=64 time=153 ms
    64 bytes from 172.16.110.8: icmp_seq=2 ttl=64 time=155 ms
    ```

    </div>

</div>

## Single-node OpenShift SiteConfig CR installation reference

<table>
<caption>SiteConfig CR installation options for single-node OpenShift clusters</caption>
<colgroup>
<col style="width: 25%" />
<col style="width: 75%" />
</colgroup>
<thead>
<tr>
<th style="text-align: left;">SiteConfig CR field</th>
<th style="text-align: left;">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td style="text-align: left;"><p><code>spec.cpuPartitioningMode</code></p></td>
<td style="text-align: left;"><p>Configure workload partitioning by setting the value for <code>cpuPartitioningMode</code> to <code>AllNodes</code>. To complete the configuration, specify the <code>isolated</code> and <code>reserved</code> CPUs in the <code>PerformanceProfile</code> CR.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>metadata.name</code></p></td>
<td style="text-align: left;"><p>Set <code>name</code> to <code>assisted-deployment-pull-secret</code> and create the <code>assisted-deployment-pull-secret</code> CR in the same namespace as the <code>SiteConfig</code> CR.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusterImageSetNameRef</code></p></td>
<td style="text-align: left;"><p>Configure the image set available on the hub cluster for all the clusters in the site. To see the list of supported versions on your hub cluster, run <code>oc get clusterimagesets</code>.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>installConfigOverrides</code></p></td>
<td style="text-align: left;"><p>Set the <code>installConfigOverrides</code> field to enable or disable optional components prior to cluster installation.</p>
<div class="important">
<div class="title">
&#10;</div>
<p>Use the reference configuration as specified in the example <code>SiteConfig</code> CR. Adding additional components back into the system might require additional reserved CPU capacity.</p>
</div></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.clusterImageSetNameRef</code></p></td>
<td style="text-align: left;"><p>Specifies the cluster image set used to deploy an individual cluster. If defined, it overrides the <code>spec.clusterImageSetNameRef</code> at site level.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.clusterLabels</code></p></td>
<td style="text-align: left;"><p>Configure cluster labels to correspond to the binding rules in the <code>PolicyGenerator</code> or <code>PolicyGentemplate</code> CRs that you define. <code>PolicyGenerator</code> CRs use the <code>policyDefaults.placement.labelSelector</code> field. <code>PolicyGentemplate</code> CRs use the <code>spec.bindingRules</code> field.</p>
<p>For example, <code>acmpolicygenerator/acm-common-ranGen.yaml</code> applies to all clusters with <code>common: true</code> set, <code>acmpolicygenerator/acm-group-du-sno-ranGen.yaml</code> applies to all clusters with <code>group-du-sno: ""</code> set.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.crTemplates.KlusterletAddonConfig</code></p></td>
<td style="text-align: left;"><p>Optional. Set <code>KlusterletAddonConfig</code> to <code>KlusterletAddonConfigOverride.yaml to override the default `KlusterletAddonConfig</code> that is created for the cluster.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.diskEncryption</code></p></td>
<td style="text-align: left;"><p>Configure this field to enable disk encryption with Trusted Platform Module (TPM) and Platform Configuration Registers (PCRs) protection. For more information, see "About disk encryption with TPM and PCR protection".</p>
<div class="note">
<div class="title">
&#10;</div>
<p>Configuring disk encryption by using the <code>diskEncryption</code> field in the <code>SiteConfig</code> CR is a Technology Preview feature in OpenShift Container Platform 4.20.</p>
</div></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.diskEncryption.type</code></p></td>
<td style="text-align: left;"><p>Set the disk encryption type to <code>tpm2</code>.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.diskEncryption.tpm2</code></p></td>
<td style="text-align: left;"><p>Configure the Platform Configuration Registers (PCRs) protection for disk encryption.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.diskEncryption.tpm2.pcrList</code></p></td>
<td style="text-align: left;"><p>Configure the list of Platform Configuration Registers (PCRs) to be used for disk encryption. You must use PCR registers 1 and 7.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.nodes.hostName</code></p></td>
<td style="text-align: left;"><p>For single-node deployments, define a single host. For three-node deployments, define three hosts. For standard deployments, define three hosts with <code>role: master</code> and two or more hosts defined with <code>role: worker</code>.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.nodes.nodeLabels</code></p></td>
<td style="text-align: left;"><p>Specify custom roles for your nodes in your managed clusters. These are additional roles are not used by any OpenShift Container Platform components, only by the user. When you add a custom role, it can be associated with a custom machine config pool that references a specific configuration for that role. Adding custom labels or roles during installation makes the deployment process more effective and prevents the need for additional reboots after the installation is complete.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.nodes.automatedCleaningMode</code></p></td>
<td style="text-align: left;"><p>Optional. Uncomment and set the value to <code>metadata</code> to enable the removal of the disk’s partitioning table only, without fully wiping the disk. The default value is <code>disabled</code>.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.nodes.bmcAddress</code></p></td>
<td style="text-align: left;"><p>BMC address that you use to access the host. Applies to all cluster types. GitOps ZTP supports iPXE and virtual media booting by using Redfish or IPMI protocols. To use iPXE booting, you must use RHACM 2.8 or later. For more information about BMC addressing, see the "Additional resources" section.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.nodes.bmcAddress</code></p></td>
<td style="text-align: left;"><p>BMC address that you use to access the host. Applies to all cluster types. GitOps ZTP supports iPXE and virtual media booting by using Redfish or IPMI protocols. To use iPXE booting, you must use RHACM 2.8 or later. For more information about BMC addressing, see the "Additional resources" section.</p>
<div class="note">
<div class="title">
&#10;</div>
<p>In far edge Telco use cases, only virtual media is supported for use with GitOps ZTP.</p>
</div></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.nodes.bmcCredentialsName</code></p></td>
<td style="text-align: left;"><p>Configure the <code>bmh-secret</code> CR that you separately create with the host BMC credentials. When creating the <code>bmh-secret</code> CR, use the same namespace as the <code>SiteConfig</code> CR that provisions the host.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.nodes.bootMode</code></p></td>
<td style="text-align: left;"><p>Set the boot mode for the host to <code>UEFI</code>. The default value is <code>UEFI</code>. Use <code>UEFISecureBoot</code> to enable secure boot on the host.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.nodes.rootDeviceHints</code></p></td>
<td style="text-align: left;"><p>Specifies the device for deployment. Identifiers that are stable across reboots are recommended. For example, <code>wwn: &lt;disk_wwn&gt;</code> or <code>deviceName: /dev/disk/by-path/&lt;device_path&gt;</code>. <code>&lt;by-path&gt;</code> values are preferred. For a detailed list of stable identifiers, see the "About root device hints" section.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.nodes.ignitionConfigOverride</code></p></td>
<td style="text-align: left;"><p>Optional. Use this field to assign partitions for persistent storage. Adjust disk ID and size to the specific hardware.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.nodes.nodeNetwork</code></p></td>
<td style="text-align: left;"><p>Configure the network settings for the node.</p></td>
</tr>
<tr>
<td style="text-align: left;"><p><code>spec.clusters.nodes.nodeNetwork.config.interfaces.ipv6</code></p></td>
<td style="text-align: left;"><p>Configure the IPv6 address for the host. For single-node OpenShift clusters with static IP addresses, the node-specific API and Ingress IPs should be the same.</p></td>
</tr>
</tbody>
</table>

<div>

<div class="title">

Additional resources

</div>

- [About disk encryption with TPM and PCR protection](../edge_computing/ztp-reference-cluster-configuration-for-vdu.xml#ztp-sno-du-disk-encryption_sno-configure-for-vdu).

- [Customizing extra installation manifests in the GitOps ZTP pipeline](../edge_computing/ztp-advanced-install-ztp.xml#ztp-customizing-the-install-extra-manifests_ztp-advanced-install-ztp)

- [Preparing the GitOps ZTP site configuration repository](../edge_computing/ztp-preparing-the-hub-cluster.xml#ztp-preparing-the-ztp-git-repository_ztp-preparing-the-hub-cluster)

- [Configuring the hub cluster with ArgoCD](../edge_computing/ztp-preparing-the-hub-cluster.xml#ztp-configuring-hub-cluster-with-argocd_ztp-preparing-the-hub-cluster)

- [Signalling GitOps ZTP cluster deployment completion with validator inform policies](../edge_computing/policygenerator_for_ztp/ztp-advanced-policygenerator-config.xml#ztp-creating-a-validator-inform-policy_ztp-advanced-policy-config)

- [Creating the managed bare-metal host secrets](../edge_computing/ztp-manual-install.xml#ztp-creating-the-site-secrets_ztp-manual-install)

- [BMC addressing](../installing/installing_bare_metal/ipi/ipi-install-installation-workflow.xml#bmc-addressing_ipi-install-installation-workflow)

- [About root device hints](../installing/installing_with_agent_based_installer/preparing-to-install-with-agent-based-installer.xml#root-device-hints_preparing-to-install-with-agent-based-installer)

</div>

# Managing host firmware settings with GitOps ZTP

Hosts require the correct firmware configuration to ensure high performance and optimal efficiency. You can deploy custom host firmware configurations for managed clusters with GitOps ZTP.

Tune hosts with specific hardware profiles in your lab and ensure they are optimized for your requirements. When you have completed host tuning to your satisfaction, you extract the host profile and save it in your GitOps ZTP repository. Then, you use the host profile to configure firmware settings in the managed cluster hosts that you deploy with GitOps ZTP.

You specify the required hardware profiles in `SiteConfig` custom resources (CRs) that you use to deploy the managed clusters. The GitOps ZTP pipeline generates the required `HostFirmwareSettings` (`HFS`) and `BareMetalHost` (`BMH`) CRs that are applied to the hub cluster.

Use the following best practices to manage your host firmware profiles.

Identify critical firmware settings with hardware vendors
Work with hardware vendors to identify and document critical host firmware settings required for optimal performance and compatibility with the deployed host platform.

Use common firmware configurations across similar hardware platforms
Where possible, use a standardized host firmware configuration across similar hardware platforms to reduce complexity and potential errors during deployment.

Test firmware configurations in a lab environment
Test host firmware configurations in a controlled lab environment before deploying in production to ensure that settings are compatible with hardware, firmware, and software.

Manage firmware profiles in source control
Manage host firmware profiles in Git repositories to track changes, ensure consistency, and facilitate collaboration with vendors.

<div>

<div class="title">

Additional resources

</div>

- [Recommended firmware configuration for vDU cluster hosts](../edge_computing/ztp-vdu-validating-cluster-tuning.xml#ztp-du-firmware-config-reference_vdu-config-ref)

</div>

## Retrieving the host firmware schema for a managed cluster

You can discover the host firmware schema for managed clusters. The host firmware schema for bare-metal hosts is populated with information that the Ironic API returns. The API returns information about host firmware interfaces, including firmware setting types, allowable values, ranges, and flags.

<div>

<div class="title">

Prerequisites

</div>

- You have installed the OpenShift CLI (`oc`).

- You have installed Red Hat Advanced Cluster Management (RHACM) and logged in to the hub cluster as a user with `cluster-admin` privileges.

- You have provisioned a cluster that is managed by RHACM.

</div>

<div>

<div class="title">

Procedure

</div>

- Discover the host firmware schema for the managed cluster. Run the following command:

  ``` terminal
  $ oc get firmwareschema -n <managed_cluster_namespace> -o yaml
  ```

  <div class="formalpara">

  <div class="title">

  Example output

  </div>

  ``` terminal
  apiVersion: v1
  items:
  - apiVersion: metal3.io/v1alpha1
    kind: FirmwareSchema
    metadata:
      creationTimestamp: "2024-09-11T10:29:43Z"
      generation: 1
      name: schema-40562318
      namespace: compute-1
      ownerReferences:
      - apiVersion: metal3.io/v1alpha1
        kind: HostFirmwareSettings
        name: compute-1.example.com
        uid: 65d0e89b-1cd8-4317-966d-2fbbbe033fe9
      resourceVersion: "280057624"
      uid: 511ad25d-f1c9-457b-9a96-776605c7b887
    spec:
      schema:
        AccessControlService:
          allowable_values:
          - Enabled
          - Disabled
          attribute_type: Enumeration
          read_only: false
        # ...
  ```

  </div>

</div>

## Retrieving the host firmware settings for a managed cluster

You can retrieve the host firmware settings for managed clusters. This is useful when you have deployed changes to the host firmware and you want to monitor the changes and ensure that they are applied successfully.

<div>

<div class="title">

Prerequisites

</div>

- You have installed the OpenShift CLI (`oc`).

- You have installed Red Hat Advanced Cluster Management (RHACM) and logged in to the hub cluster as a user with `cluster-admin` privileges.

- You have provisioned a cluster that is managed by RHACM.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Retrieve the host firmware settings for the managed cluster. Run the following command:

    ``` terminal
    $ oc get hostfirmwaresettings -n <cluster_namespace> <node_name> -o yaml
    ```

    <div class="formalpara">

    <div class="title">

    Example output

    </div>

    ``` terminal
    apiVersion: v1
    items:
    - apiVersion: metal3.io/v1alpha1
      kind: HostFirmwareSettings
      metadata:
        creationTimestamp: "2024-09-11T10:29:43Z"
        generation: 1
        name: compute-1.example.com
        namespace: kni-qe-24
        ownerReferences:
        - apiVersion: metal3.io/v1alpha1
          blockOwnerDeletion: true
          controller: true
          kind: BareMetalHost
          name: compute-1.example.com
          uid: 0baddbb7-bb34-4224-8427-3d01d91c9287
        resourceVersion: "280057626"
        uid: 65d0e89b-1cd8-4317-966d-2fbbbe033fe9
      spec:
        settings: {}
      status:
        conditions:
        - lastTransitionTime: "2024-09-11T10:29:43Z"
          message: ""
          observedGeneration: 1
          reason: Success
          status: "True"
          type: ChangeDetected
        - lastTransitionTime: "2024-09-11T10:29:43Z"
          message: Invalid BIOS setting
          observedGeneration: 1
          reason: ConfigurationError
          status: "False"
          type: Valid
        lastUpdated: "2024-09-11T10:29:43Z"
        schema:
          name: schema-40562318
          namespace: compute-1
        settings:
          AccessControlService: Enabled
          AcpiHpet: Enabled
          AcpiRootBridgePxm: Enabled
          # ...
    ```

    </div>

    - Indicates that a change in the host firmware settings has been detected

    - Indicates that the host has an invalid firmware setting

    - The complete list of configured host firmware settings is returned under the `status.settings` field

2.  Optional: Check the status of the `HostFirmwareSettings` (`hfs`) custom resource in the cluster:

    ``` terminal
    $ oc get hfs -n <managed_cluster_namespace> <managed_cluster_name> -o jsonpath='{.status.conditions[?(@.type=="ChangeDetected")].status}'
    ```

    <div class="formalpara">

    <div class="title">

    Example output

    </div>

    ``` terminal
    True
    ```

    </div>

3.  Optional: Check for invalid firmware settings in the cluster host. Run the following command:

    ``` terminal
    $ oc get hfs -n <managed_cluster_namespace> <managed_cluster_name> -o jsonpath='{.status.conditions[?(@.type=="Valid")].status}'
    ```

    <div class="formalpara">

    <div class="title">

    Example output

    </div>

    ``` terminal
    False
    ```

    </div>

</div>

## Deploying user-defined firmware to cluster hosts with GitOps ZTP

You can deploy user-defined firmware settings to cluster hosts by configuring the `SiteConfig` custom resource (CR) to include a hardware profile that you want to apply during cluster host provisioning. You can configure hardware profiles to apply to hosts in the following scenarios:

- All hosts site-wide

- Only cluster hosts that meet certain criteria

- Individual cluster hosts

> [!IMPORTANT]
> You can configure host hardware profiles to be applied in a hierarchy. Cluster-level settings override site-wide settings. Node level profiles override cluster and site-wide settings.

<div>

<div class="title">

Prerequisites

</div>

- You have installed the OpenShift CLI (`oc`).

- You have installed Red Hat Advanced Cluster Management (RHACM) and logged in to the hub cluster as a user with `cluster-admin` privileges.

- You have provisioned a cluster that is managed by RHACM.

- You created a Git repository where you manage your custom site configuration data. The repository must be accessible from the hub cluster and be defined as a source repository for the Argo CD application.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Create the host firmware profile that contain the firmware settings you want to apply. For example, create the following YAML file:

    <div class="formalpara">

    <div class="title">

    host-firmware.profile

    </div>

    ``` yaml
    BootMode: Uefi
    LogicalProc: Enabled
    ProcVirtualization: Enabled
    ```

    </div>

2.  Save the hardware profile YAML file relative to the `kustomization.yaml` file that you use to define how to provision the cluster, for example:

    ``` terminal
    example-ztp/install
        └── site-install
              ├── siteconfig-example.yaml
              ├── kustomization.yaml
              └── host-firmware.profile
    ```

3.  Edit the `SiteConfig` CR to include the firmware profile that you want to apply in the cluster. For example:

    ``` yaml
    apiVersion: ran.openshift.io/v1
    kind: SiteConfig
    metadata:
      name: "site-plan-cluster"
      namespace: "example-cluster-namespace"
    spec:
      baseDomain: "example.com"
      # ...
      biosConfigRef:
        filePath: "./host-firmware.profile"
    ```

    - Applies the hardware profile to all cluster hosts site-wide

    > [!NOTE]
    > Where possible, use a single `SiteConfig` CR per cluster.

4.  Optional. To apply a hardware profile to hosts in a specific cluster, update `clusters.biosConfigRef.filePath` with the hardware profile that you want to apply. For example:

    ``` yaml
    clusters:
      - clusterName: "cluster-1"
        # ...
        biosConfigRef:
          filePath: "./host-firmware.profile"
    ```

    - Applies to all hosts in the `cluster-1` cluster

5.  Optional. To apply a hardware profile to a specific host in the cluster, update `clusters.nodes.biosConfigRef.filePath` with the hardware profile that you want to apply. For example:

    ``` yaml
    clusters:
      - clusterName: "cluster-1"
        # ...
        nodes:
          - hostName: "compute-1.example.com"
            # ...
            bootMode: "UEFI"
            biosConfigRef:
              filePath: "./host-firmware.profile"
    ```

    - Applies the firmware profile to the `compute-1.example.com` host in the cluster

6.  Commit the `SiteConfig` CR and associated `kustomization.yaml` changes in your Git repository and push the changes.

    The ArgoCD pipeline detects the changes and begins the managed cluster deployment.

    > [!NOTE]
    > Cluster deployment proceeds even if an invalid firmware setting is detected. To apply a correction using GitOps ZTP, re-deploy the cluster with the corrected hardware profile.

</div>

<div>

<div class="title">

Verification

</div>

- Check that the firmware settings have been applied in the managed cluster host. For example, run the following command:

  ``` terminal
  $ oc get hfs -n <managed_cluster_namespace> <managed_cluster_name> -o jsonpath='{.status.conditions[?(@.type=="Valid")].status}'
  ```

  <div class="formalpara">

  <div class="title">

  Example output

  </div>

  ``` terminal
  True
  ```

  </div>

</div>

# Monitoring managed cluster installation progress

The ArgoCD pipeline uses the `SiteConfig` CR to generate the cluster configuration CRs and syncs it with the hub cluster. You can monitor the progress of the synchronization in the ArgoCD dashboard.

<div>

<div class="title">

Prerequisites

</div>

- You have installed the OpenShift CLI (`oc`).

- You have logged in to the hub cluster as a user with `cluster-admin` privileges.

</div>

<div class="formalpara">

<div class="title">

Procedure

</div>

When the synchronization is complete, the installation generally proceeds as follows:

</div>

1.  The Assisted Service Operator installs OpenShift Container Platform on the cluster. You can monitor the progress of cluster installation from the RHACM dashboard or from the command line by running the following commands:

    1.  Export the cluster name:

        ``` terminal
        $ export CLUSTER=<clusterName>
        ```

    2.  Query the `AgentClusterInstall` CR for the managed cluster:

        ``` terminal
        $ oc get agentclusterinstall -n $CLUSTER $CLUSTER -o jsonpath='{.status.conditions[?(@.type=="Completed")]}' | jq
        ```

    3.  Get the installation events for the cluster:

        ``` terminal
        $ curl -sk $(oc get agentclusterinstall -n $CLUSTER $CLUSTER -o jsonpath='{.status.debugInfo.eventsURL}')  | jq '.[-2,-1]'
        ```

# Troubleshooting GitOps ZTP by validating the installation CRs

The ArgoCD pipeline uses the `SiteConfig` and `PolicyGenerator` or `PolicyGentemplate` custom resources (CRs) to generate the cluster configuration CRs and Red Hat Advanced Cluster Management (RHACM) policies. Use the following steps to troubleshoot issues that might occur during this process.

<div>

<div class="title">

Prerequisites

</div>

- You have installed the OpenShift CLI (`oc`).

- You have logged in to the hub cluster as a user with `cluster-admin` privileges.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Check that the installation CRs were created by using the following command:

    ``` terminal
    $ oc get AgentClusterInstall -n <cluster_name>
    ```

    If no object is returned, use the following steps to troubleshoot the ArgoCD pipeline flow from `SiteConfig` files to the installation CRs.

2.  Verify that the `ManagedCluster` CR was generated using the `SiteConfig` CR on the hub cluster:

    ``` terminal
    $ oc get managedcluster
    ```

3.  If the `ManagedCluster` is missing, check if the `clusters` application failed to synchronize the files from the Git repository to the hub cluster:

    ``` terminal
    $ oc get applications.argoproj.io -n openshift-gitops clusters -o yaml
    ```

    1.  To identify error logs for the managed cluster, inspect the `status.operationState.syncResult.resources` field. For example, if an invalid value is assigned to the `extraManifestPath` in the `SiteConfig` CR, an error similar to the following is generated:

        ``` text
        syncResult:
          resources:
          - group: ran.openshift.io
            kind: SiteConfig
            message: The Kubernetes API could not find ran.openshift.io/SiteConfig for
              requested resource spoke-sno/spoke-sno. Make sure the "SiteConfig" CRD is
              installed on the destination cluster
        ```

    2.  To see a more detailed `SiteConfig` error, complete the following steps:

        1.  In the Argo CD dashboard, click the **SiteConfig** resource that Argo CD is trying to sync.

        2.  Check the **DESIRED MANIFEST** tab to find the `siteConfigError` field.

            ``` text
            siteConfigError: >- Error: could not build the entire SiteConfig defined by /tmp/kust-plugin-config-1081291903: stat sno-extra-manifest: no such file or directory
            ```

    3.  Check the `Status.Sync` field. If there are log errors, the `Status.Sync` field could indicate an `Unknown` error:

        ``` text
        Status:
          Sync:
            Compared To:
              Destination:
                Namespace:  clusters-sub
                Server:     https://kubernetes.default.svc
              Source:
                Path:             sites-config
                Repo URL:         https://git.com/ran-sites/siteconfigs/.git
                Target Revision:  master
            Status:               Unknown
        ```

</div>

# Troubleshooting GitOps ZTP virtual media booting on SuperMicro servers

SuperMicro X11 servers do not support virtual media installations when the image is served using the `https` protocol. As a result, single-node OpenShift deployments for this environment fail to boot on the target node. To avoid this issue, log in to the hub cluster and disable Transport Layer Security (TLS) in the `Provisioning` resource. This ensures the image is not served with TLS even though the image address uses the `https` scheme.

<div>

<div class="title">

Prerequisites

</div>

- You have installed the OpenShift CLI (`oc`).

- You have logged in to the hub cluster as a user with `cluster-admin` privileges.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Disable TLS in the `Provisioning` resource by running the following command:

    ``` terminal
    $ oc patch provisioning provisioning-configuration --type merge -p '{"spec":{"disableVirtualMediaTLS": true}}'
    ```

2.  Continue the steps to deploy your single-node OpenShift cluster.

</div>

# Removing a managed cluster site from the GitOps ZTP pipeline

You can remove a managed site and the associated installation and configuration policy CRs from the GitOps Zero Touch Provisioning (ZTP) pipeline.

<div>

<div class="title">

Prerequisites

</div>

- You have installed the OpenShift CLI (`oc`).

- You have logged in to the hub cluster as a user with `cluster-admin` privileges.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Remove a site and the associated CRs by removing the associated `SiteConfig` and `PolicyGenerator` or `PolicyGentemplate` files from the `kustomization.yaml` file.

2.  Add the following `syncOptions` field to your `SiteConfig` application.

    ``` yaml
    kind: Application
    spec:
      syncPolicy:
        syncOptions:
        - PrunePropagationPolicy=background
    ```

    When you run the GitOps ZTP pipeline again, the generated CRs are removed.

3.  Optional: If you want to permanently remove a site, you should also remove the `SiteConfig` and site-specific `PolicyGenerator` or `PolicyGentemplate` files from the Git repository.

4.  Optional: If you want to remove a site temporarily, for example when redeploying a site, you can leave the `SiteConfig` and site-specific `PolicyGenerator` or `PolicyGentemplate` CRs in the Git repository.

</div>

<div>

<div class="title">

Additional resources

</div>

- For information about removing a cluster, see [Removing a cluster from management](https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/2.9/html/clusters/cluster_mce_overview#remove-managed-cluster).

</div>

# Removing obsolete content from the GitOps ZTP pipeline

If a change to the `PolicyGenerator` or `PolicyGentemplate` configuration results in obsolete policies, for example, if you rename policies, use the following procedure to remove the obsolete policies.

<div>

<div class="title">

Prerequisites

</div>

- You have installed the OpenShift CLI (`oc`).

- You have logged in to the hub cluster as a user with `cluster-admin` privileges.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Remove the affected `PolicyGenerator` or `PolicyGentemplate` files from the Git repository, commit and push to the remote repository.

2.  Wait for the changes to synchronize through the application and the affected policies to be removed from the hub cluster.

3.  Add the updated `PolicyGenerator` or `PolicyGentemplate` files back to the Git repository, and then commit and push to the remote repository.

    > [!NOTE]
    > Removing GitOps Zero Touch Provisioning (ZTP) policies from the Git repository, and as a result also removing them from the hub cluster, does not affect the configuration of the managed cluster. The policy and CRs managed by that policy remains in place on the managed cluster.

4.  Optional: As an alternative, after making changes to `PolicyGenerator` or `PolicyGentemplate` CRs that result in obsolete policies, you can remove these policies from the hub cluster manually. You can delete policies from the RHACM console using the **Governance** tab or by running the following command:

    ``` terminal
    $ oc delete policy -n <namespace> <policy_name>
    ```

</div>

# Tearing down the GitOps ZTP pipeline

You can remove the ArgoCD pipeline and all generated GitOps Zero Touch Provisioning (ZTP) artifacts.

<div>

<div class="title">

Prerequisites

</div>

- You have installed the OpenShift CLI (`oc`).

- You have logged in to the hub cluster as a user with `cluster-admin` privileges.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Detach all clusters from Red Hat Advanced Cluster Management (RHACM) on the hub cluster.

2.  Delete the `kustomization.yaml` file in the `deployment` directory using the following command:

    ``` terminal
    $ oc delete -k out/argocd/deployment
    ```

3.  Commit and push your changes to the site repository.

</div>
